[package]
name = "rust-wrapper"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.86"
async-io = "2.3.2"
async-trait = "0.1.80"
axum = "0.7.5"
base64 = "0.22.1"
bytes = "1.6.0"
ariadne = "0.4.1"
chumsky = { version = "1.0.0-alpha.7", features = ["label"] }
clap = "4.5.4"
clap_builder = "4.5.2"
clap_derive = "4.5.4"
clap_lex = "0.7.0"
combine = "4.6.7"
console = "0.15.8"
crossbeam-utils = "0.8.20"
derive_more = "0.99.17"
digest = "0.10.7"
either = "1.12.0"
futures = "0.3.30"
futures-util = "0.3.30"
glue = "0.8.7"
hex = "0.4.3"
http = "1.1.0"
hyper = "1.3.1"
itertools = "0.13.0"
log = "0.4.21"
loom = "0.7.2"
nom = "7.1.3"
pretty_assertions = "1.4.0"
quickcheck = "1.0.3"
quote = "1.0.36"
rand = "0.8.5"
reqwest = "0.12.4"
shlex = "1.3.0"
serde = "1.0.202"
serde_derive = "1.0.202"
serde_with = "3.8.1"
serde_yaml = "0.9.34"
strum = "0.26.2"
tempfile = "3.10.1"
thiserror = "1.0.61"
time = "0.3.36"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
tokio-utils = "0.1.2"
tower = "0.4.13"
tracing = "0.1.40"
uuid = "1.8.0"
walkdir = "2.5.0"
